--- a/src/styles/Register.css
+++ b/src/styles/Register.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 97vh;
     display: flex;
+  
 }
 .signup{
     width: 30%;
@@ -22,6 +23,7 @@
     gap: 20px;
     justify-items: center;
     align-items: center;
+  
 }
 .main{
     width:100%;
@@ -39,4 +41,30 @@
     padding: 5px 15px;
     background-color:   rgb(14, 24, 37);
     color: white;
+}
+.dash{
+   
+  
+    border: none;
+    background: none;
+    /* border-bottom: 1px solid red; */
+}
+.dash:hover{
+    border-bottom: 1px solid rgb(68, 131, 202);
+}
+.box{
+    display: flex;
+    gap: 20px;
+}
+
+@media screen and (max-width:420px){
+    .allover{
+        flex-direction: column;
+    }
+    .signup{
+        width: 100%;
+    }
+    .design{
+        width: 100%;
+    }
 }
