--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -1,10 +1,17 @@
 .dashboard{
     display: flex;
+    background-color: rgb(14, 24, 37) ;
+    color: rgb(68, 131, 202);
 }
 .leftbar{
     width: 20%;
     height: 90vh;
     border: 1px solid red;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    /* justify-content: center; */
 }
 .middlebar{
     width: 50%;
@@ -15,4 +22,111 @@
     width: 30%;
     height: 90vh;
     border: 1px solid red;
+}
+.menu{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    /* border: 1px solid red; */
+}
+.belowmenu{
+    /* border: 1px solid red; */
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.back{
+    display: flex;
+    gap: 10px;
+    border: 1px solid rgb(68, 131, 202);
+    border-radius: 1.2rem;
+    padding: 1px 15px;
+}
+.out{
+    border: 1px solid rgb(68, 131, 202);
+    border-radius: 0.5rem;
+    display: flex;
+    gap: 20px;
+    padding: 2px 5px;
+    color: rgb(14, 24, 37);
+    background-color: rgb(68, 131, 202);
+}
+.addgroup{
+    border: none;
+    /* text-decoration: none;
+     */
+     background: none;
+     color: rgb(68, 131, 202);
+     display: flex;
+     gap: 10px;
+}
+.dashboarding{
+    display: flex;
+    gap: 10px;
+    text-decoration: none;
+    border: none;
+    color: rgb(68, 131, 202);
+    margin: 10px;
+}
+.mentos{
+    border: 1px solid rgb(68, 131, 202);
+    border-radius: 4rem;
+    height: 50%;
+    width: 100%;
+    display: flex;
+   
+}
+.middlebar{
+    display: flex;
+    flex-direction: column;
+    padding:50px 50px;
+}
+.rightinfo{
+    /* border: 1px solid white; */
+    /* border-radius: 4rem; */
+    width: 40%;
+    /* height: 50%; */
+    display: flex;
+    flex-direction: column;
+}
+.aboveinfo{
+    color: white;
+    height: 50%;
+    border-bottom: 1px solid rgb(68, 131, 202);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.belowinfo{
+    color: white;
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.aboveinfo p{
+    color: green;
+}
+.belowinfo p{
+    color: red;
+}
+.info{
+    /* height: 50%; */
+    /* border: 1px solid white; */
+    width: 60%;
+    background-color:rgb(68, 131, 202) ;
+    border-radius: 4rem;
+   color:rgb(14, 24, 37) ;
+   padding: 10px 10px;
+}
+.camila{
+    font-size: 40px;
+    font-weight: 600;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.rightbar table{
+    color: white;
 }
